--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@storybook/react": "^5.0.7",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^2.0.1",
+    "css-loader": "^2.1.1",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
+    "sass-loader": "^7.1.0",
     "storybook-addon-jsx": "^7.1.0",
+    "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
